--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
         <div class="grid grid-cols-2 gap-4 mb-12">
           <img
-            src="/img/img.jpeg"
+            src="./img/img.jpeg"
             class="rounded-xl shadow-md aspect-square w-full object-cover object-top border-2 border-emerald-50"
           />
           <img
-            src="/img/img1.jpeg"
+            src="./img/img1.jpeg"
             class="hidden md:block rounded-xl shadow-md aspect-square w-full object-cover object-top border-2 border-emerald-50"
           />
         </div>
