--- a/index.html
+++ b/index.html
@@ -201,19 +201,19 @@
       }
 
       // Music Toggle
-      const audio = document.getElementById("audio");
-      const btn = document.getElementById("musicToggle");
-      const icon = document.getElementById("icon");
+      // const audio = document.getElementById("audio");
+      // const btn = document.getElementById("musicToggle");
+      // const icon = document.getElementById("icon");
 
-      btn.onclick = function () {
-        if (audio.paused) {
-          audio.play();
-          icon.classList.replace("fa-play", "fa-pause");
-        } else {
-          audio.pause();
-          icon.classList.replace("fa-pause", "fa-play");
-        }
-      };
+      // btn.onclick = function () {
+      //   if (audio.paused) {
+      //     audio.play();
+      //     icon.classList.replace("fa-play", "fa-pause");
+      //   } else {
+      //     audio.pause();
+      //     icon.classList.replace("fa-pause", "fa-play");
+      //   }
+      // };
     </script>
   </body>
 </html>
