--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             Kp. Pandelekan Ds. Warakas Kec. Binuang Kab. Serang
           </p>
           <a
-            href="https://maps.app.goo.gl/LrWu4TrYJgVo8XBv7"
+            href="https://www.google.com/maps/place/musollah+raudotul+ibadah/@-6.1255497,106.3357401,18.72z/data=!4m6!3m5!1s0x2e41f78e71dc4af3:0x688e439190265848!8m2!3d-6.124873!4d106.3365314!16s%2Fg%2F11dyqr_mxv?entry=ttu&g_ep=EgoyMDI2MDIyNS4wIKXMDSoASAFQAw%3D%3D"
             target="_blank"
             class="mb-6 font-bold flex gap-2 items-center justify-center text-emerald-800 italic"
             ><svg
@@ -122,7 +122,7 @@
             class="h-64 rounded-xl overflow-hidden border-4 border-stone-100 shadow-inner"
           >
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d3967.028205121125!2d106.3372928!3d-6.1269068!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sen!2sid!4v1772166025286!5m2!1sen!2sid"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1206.7339549101353!2d106.33574008845545!3d-6.125549666078424!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e41f78e71dc4af3%3A0x688e439190265848!2smusollah%20raudotul%20ibadah!5e0!3m2!1sen!2sid!4v1772251447935!5m2!1sen!2sid"
               width="100%"
               height="100%"
               style="border: 0"
